--- a/discord/coral-agent.toml
+++ b/discord/coral-agent.toml
@@ -6,6 +6,7 @@ description = "A support agent tasked with one Discord support thread, responsib
 [options]
 DISCORD_API_TOKEN = { type = "string", description = "Discord API token", required = true }
 DISCORD_THREAD_ID = { type = "string", description = "The ID of the thread to watch", required = true }
+OPENAI_API_KEY = { type = "string", description = "An API key for OpenAI", required = true }
 
 [runtimes.executable]
 command = ["target/release/discord.exe"]
