--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.5.45", features = ["derive", "env"] }
 serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model"] }
 tracing-subscriber = "0.3.19"
 tracing = "0.1.41"
+humantime = "2.2.0"
